@@ -569,6 +569,7 @@ define function, begin
 554,runningonmobile,0            #returns true if the device is Android
 555,runningonconsole,0           #returns true if the device is OUYA
 556,inputstringwithvirtualkeyboard,3,0,-1,-1 # (string id, max length, only player)
+557,getitemdescription,2,0,0     #(string, item) - puts the description of item(item) in string(string)
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
